# intoxalock-device-removal

./: .gitignore  AGENT.md  Makefile  README.md  pyproject.toml  skills-lock.json
.agents/skills/spec-builder/examples/todo-lambda/: pyproject.toml
.agents/skills/spec-builder/examples/todo-lambda/src/todo_lambda/features/todos/handlers/: routes.py
.agents/skills/spec-builder/examples/todo-lambda/src/todo_lambda/features/todos/ports/: __init__.py
.claude/: agents
.claude/skills/: gherkin-author  spec-builder  spec-partner
agents/agents/: judge-iteration.md
agents/gherkin-author/: SKILL.md
agents/spec-builder/: SKILL.md
agents/spec-partner/: SKILL.md
apps/elevenlabs-agent/: .env.example  AGENT.md  Makefile  pyproject.toml
apps/elevenlabs-agent/config/: dev.toml  prod.toml
apps/elevenlabs-agent/src/elevenlabs_agent/: __main__.py  cli.py  client.py  config.py
apps/elevenlabs-agent/src/elevenlabs_agent/calling/: outbound.py
apps/elevenlabs-agent/src/elevenlabs_agent/definition/: __init__.py  agent.py  evaluation.py  prompt.py  tools.py
apps/elevenlabs-agent/src/elevenlabs_agent/sync/: agent_sync.py  post_call_webhook.py
apps/elevenlabs-agent/tests/: test_agent_definition.py  test_cli.py  test_config.py
apps/elevenlabs-agent/tests/agent/: AGENT.md  README.md  create_tests.py  run_tests.py  runner.py  scenarios.feature  sync_tests.py
apps/elevenlabs-agent/tests/agent/suites/: __init__.py  shared.py  t1_core_happy_paths.py  t2_shop_pushback_and_corrections.py  t3_guardrails_and_adversarial.py  t4_technical_failure.py  t5_edge_cases.py  t6_voicemail_handling.py
apps/lambda-hello/: pyproject.toml
apps/lambda-hello/src/lambda_hello/: handler.py
apps/lambda-hello/tests/: test_handler.py
apps/todo-lambda/: pyproject.toml
docs/: architecture.md
docs/architecture/: conventions.md  module-structure.md  slice-structure.md
infra/: app.py  cdk.json
infra/stacks/: lambda_hello.py
(+48 files in other folders)
