[project]
name = "elevenlabs-agent"
version = "0.1.0"
description = "CLI to manage/sync an ElevenLabs agent."
requires-python = ">=3.11"
dependencies = ["core", "elevenlabs"]

[project.scripts]
hello = "elevenlabs_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elevenlabs_agent"]

[tool.uv.sources]
core = { workspace = true }
