[project]
name = "lambda-hello"
version = "0.1.0"
description = "Hello-world AWS Lambda function."
requires-python = ">=3.11"
dependencies = ["core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_hello"]

[tool.uv.sources]
core = { workspace = true }
