[project]
name = "todo-lambda"
version = "0.1.0"
description = "Full-CRUD Todo API AWS Lambda, backed by an in-memory store."
requires-python = ">=3.11"
dependencies = [
    "core",
    "pydantic",
    "structlog>=26.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_lambda"]

[tool.uv.sources]
core = { workspace = true }
